#194 - Spanish translations for all needed

--- a/savis4/src/app/features/bar-chart/bar-chart.component.html
+++ b/savis4/src/app/features/bar-chart/bar-chart.component.html
@@ -8,7 +8,7 @@
         [routerLink]="['/bar-chart']"
         target="_blank"
         rel="noopener norefferer">
-        Bar Chart Guide
+        {{"button_toGuide"|translate}}{{"homepage_barChart" | translate}}
     </a>
     </div>
 
@@ -20,7 +20,7 @@
             [routerLink] ="['/problems-bar-chart']"
             target="_blank"
             rel="noopener norefferer">
-                Bar Chart Practice Problems
+                {{"button_toPP"|translate}}{{"homepage_barChart" | translate}}
         </a>
     </div>
         
