--- a/savis4/src/app/features/correlation/correlation.component.html
+++ b/savis4/src/app/features/correlation/correlation.component.html
@@ -9,7 +9,7 @@
       [routerLink]="['/correlation-manual']"
       target="_blank"
       rel="noopener norefferer">
-        Correlation Visualization Guide
+        {{"button_toGuide"|translate}}{{"homepage_Correlation_Visualization" | translate}}
     </a>
   </div>
 
@@ -21,7 +21,7 @@
           [routerLink] ="['/problems-correlation']"
           target="_blank"
           rel="noopener norefferer">
-            Correlation Practice Problems
+            {{"button_toPP"|translate}}{{"homepage_Correlation_Visualization" | translate}}
       </a>
   </div>
 
