--- a/savis4/src/app/features/dot-chart/dot-chart.component.html
+++ b/savis4/src/app/features/dot-chart/dot-chart.component.html
@@ -9,7 +9,7 @@
         [routerLink]="['/dot-plot']"
         target="_blank"
         rel="noopener norefferer">
-        Dot Plot Guide
+        {{"button_toGuide"|translate}}{{"homepage_dotPlot" | translate}}
     </a>
     </div>
 
@@ -21,7 +21,7 @@
             [routerLink]="['/problems-dot-plot']"
             target="_blank"
             rel="noopener norefferer">
-                Dot Plot Practice Problems
+                {{"button_toPP"|translate}}{{"homepage_dotPlot" | translate}}
         </a>
     </div>
 
