--- a/savis4/src/app/features/linear-regression/linear-regression.component.html
+++ b/savis4/src/app/features/linear-regression/linear-regression.component.html
@@ -10,7 +10,7 @@
     [routerLink]="['/regression']"
     target="_blank"
     rel="noopener norefferer">
-       Linear Regression Guide
+       {{"button_toGuide"|translate}}{{"homepage_Linear_Regression_Visualization" | translate}}
   </a>
 </div>
 
@@ -22,7 +22,7 @@
     [routerLink]="['/problems-regression']"
     target="_blank"
     rel="noopener norefferer">
-      Linear Regression Practice Problems
+      {{"button_toPP"|translate}}{{"homepage_Linear_Regression_Visualization" | translate}}
   </a>
 </div>
 
