--- a/savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
+++ b/savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
@@ -10,7 +10,7 @@
         [routerLink]="['/omci']"
         target="_blank"
         rel="noopener norefferer">
-            One Mean Confidence Interval Guide
+            {{"button_toGuide"|translate}}{{"homepage_One_Mean_Confidence_Interval" | translate}}
     </a>
     </div>
 
@@ -22,7 +22,7 @@
         [routerLink]="['/problems-omci']"
         target="_blank"
         rel="noopener norefferer">
-            One Mean Confidence Interval Practice Problems
+            {{"button_toPP"|translate}}{{"homepage_One_Mean_Confidence_Interval" | translate}}
     </a>
     </div>
 
