--- a/savis4/src/app/features/one-mean/one-mean.component.html
+++ b/savis4/src/app/features/one-mean/one-mean.component.html
@@ -9,7 +9,7 @@
         [routerLink]="['/omht']"
         target="_blank"
         rel="noopener norefferer">
-            One Mean Hypothesis Testing Guide
+            {{"button_toGuide"|translate}}{{"homepage_One_Mean_Hypothesis_Testing" | translate}}
     </a>
     </div>
 
@@ -21,7 +21,7 @@
         [routerLink]="['/problems-omht']"
         target="_blank"
         rel="noopener norefferer">
-            One Mean Hypothesis Testing Practice Problems
+            {{"button_toPP"|translate}}{{"homepage_One_Mean_Hypothesis_Testing" | translate}}
     </a>
     </div>
 
