--- a/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
+++ b/savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.html
@@ -9,7 +9,7 @@
         [routerLink]="['/opci']"
         target="_blank"
         rel="noopener norefferer">
-            One Proportion Confidence Interval Guide
+            {{"button_toGuide"|translate}}{{"homepage_One_Proportions_Confidence_Interval" | translate}}
     </a>
     </div>
 
@@ -21,7 +21,7 @@
         [routerLink]="['/problems-opci']"
         target="_blank"
         rel="noopener norefferer">
-            One Proportion Confidence Interval Practice Problems
+            {{"button_toPP"|translate}}{{"homepage_One_Proportions_Confidence_Interval" | translate}}
     </a>
     </div>
 
