--- a/savis4/src/app/features/one-proportion/one-proportion.component.html
+++ b/savis4/src/app/features/one-proportion/one-proportion.component.html
@@ -9,7 +9,7 @@
       [routerLink]="['/opht']"
       target="_blank"
       rel="noopener norefferer">
-          One Proportion Hypothesis Testing Guide
+          {{"button_toGuide"|translate}}{{"homepage_One_Proportion_Hypothesis_Testing" | translate}}
     </a>
   </div>
 
@@ -21,7 +21,7 @@
       [routerLink]="['/problems-opht']"
       target="_blank"
       rel="noopener norefferer">
-          One Proportion Hypothesis Testing Practice Problems
+          {{"button_toPP"|translate}}{{"homepage_One_Proportion_Hypothesis_Testing" | translate}}
     </a>
   </div>
 
