--- a/savis4/src/app/features/two-means-ci/two-means-ci.component.html
+++ b/savis4/src/app/features/two-means-ci/two-means-ci.component.html
@@ -9,7 +9,7 @@
       [routerLink]="['/tmci']"
       target="_blank"
       rel="noopener norefferer">
-          Two Mean Confidence Interval Guide
+          {{"button_toGuide"|translate}}{{"homepage_Two_Mean_Confidence_Interval" | translate}}
     </a>
   </div>
 
@@ -21,7 +21,7 @@
       [routerLink]="['/problems-tmci']"
       target="_blank"
       rel="noopener norefferer">
-          Two Mean Confidence Interval Practice Problems
+          {{"button_toPP"|translate}}{{"homepage_Two_Mean_Confidence_Interval" | translate}}
     </a>
   </div>
 
