--- a/savis4/src/app/features/two-means/two-means.component.html
+++ b/savis4/src/app/features/two-means/two-means.component.html
@@ -9,7 +9,7 @@
       [routerLink]="['/tmht']"
       target="_blank"
       rel="noopener norefferer">
-          Two Mean Hypothesis Testing Guide
+          {{"button_toGuide"|translate}}{{"homepage_Two_Mean_Hypothesis_Testing" | translate}}
     </a>
   </div>
 
@@ -21,7 +21,7 @@
       [routerLink]="['/problems-tmht']"
       target="_blank"
       rel="noopener norefferer">
-          Two Mean Hypothesis Testing Practice Problems
+          {{"button_toPP"|translate}}{{"homepage_Two_Mean_Hypothesis_Testing" | translate}}
     </a>
   </div>
 
