--- a/savis4/src/app/features/two-proportions/two-proportions.component.html
+++ b/savis4/src/app/features/two-proportions/two-proportions.component.html
@@ -9,7 +9,7 @@
       [routerLink]="['/tpht']"
       target="_blank"
       rel="noopener norefferer">
-          Two Proportion Hypothesis Testing Guide
+          {{"button_toGuide"|translate}}{{"homepage_Two_Proportion_Hypothesis_Testing" | translate}}
     </a>
   </div>
 
@@ -21,7 +21,7 @@
       [routerLink]="['/problems-tpht']"
       target="_blank"
       rel="noopener norefferer">
-          Two Proportion Hypothesis Testing Practice Problems
+          {{"button_toPP"|translate}}{{"homepage_Two_Proportion_Hypothesis_Testing" | translate}}
     </a>
   </div>
 
