--- a/savis4/src/app/problems/problems-components/tpci/tpci.component.html
+++ b/savis4/src/app/problems/problems-components/tpci/tpci.component.html
@@ -14,7 +14,7 @@
       </div>
 
       <!--button to generate new problem-->
-      <button class="generate-button" (click)="generateNewProblem()">New Problem</button>
+      <button class="generate-button" (click)="generateNewProblem()">{{ 'problems_generator' | translate }}</button>
 
       <!--user input for sample proportion for group A-->
       <div class = "text">
@@ -61,7 +61,7 @@
       </div>
 
       <!--submit button-->
-      <button class = "submit-button" (click)="submitAnswer()">Check Answer</button>
+      <button class = "submit-button" (click)="submitAnswer()">{{ 'problems_submit' | translate }}</button>
 
       <!--follow the same structure as correlation problem-->
       <div *ngIf = "showAnswer" class = "feedback-section">
@@ -147,7 +147,7 @@
         </div>
 
         <!--hide answer button-->
-        <button *ngIf = "showAnswer" (click) = "hideAnswer()" class="hide-button">Hide Answer</button>
+        <button *ngIf = "showAnswer" (click) = "hideAnswer()" class="hide-button">{{ 'problems_hide' | translate }}</button>
       </div>
 
     </div>
