--- a/savis4/src/app/user-manual/user-manual-components/bar-chart/bar-chart.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/bar-chart/bar-chart.component.html
@@ -10,7 +10,7 @@
             [routerLink] ="['/barchart']"
             target="_blank"
             rel="noopener norefferer">
-                Bar Chart Graph
+                {{"button_toGraph"|translate}}{{"homepage_barChart"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_bar-chart_title' | translate}}</h1>
