--- a/savis4/src/app/user-manual/user-manual-components/correlation/correlation_um.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/correlation/correlation_um.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/correlation']"
             target="_blank"
             rel="noopener norefferer">
-                Correlation Graph
+                {{"button_toGraph"|translate}}{{"homepage_Correlation_Visualization"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_correlation_title' | translate}}</h1>
