--- a/savis4/src/app/user-manual/user-manual-components/dot-plot/dot-plot.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/dot-plot/dot-plot.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/dotplot']"
             target="_blank"
             rel="noopener norefferer">
-                Dot Plot Graph
+                {{"button_toGraph"|translate}}{{"homepage_dotPlot"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_dot-plot_title' | translate}}</h1>
