--- a/savis4/src/app/user-manual/user-manual-components/omci/omci.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/omci/omci.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/onemeanCI']"
             target="_blank"
             rel="noopener norefferer">
-                One Mean Confidence Interval Graph
+                {{"button_toGraph"|translate}}{{"homepage_One_Mean_Confidence_Interval"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_omci_title' | translate}}</h1>
