--- a/savis4/src/app/user-manual/user-manual-components/omht/omht.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/omht/omht.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/onemean']"
             target="_blank"
             rel="noopener norefferer">
-                One Mean Hypothesis Graph
+                {{"button_toGraph"|translate}}{{"homepage_One_Mean_Hypothesis_Testing"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_omht_title' | translate}}</h1>
