--- a/savis4/src/app/user-manual/user-manual-components/opci/opci.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/opci/opci.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/oneproportionCI']"
             target="_blank"
             rel="noopener norefferer">
-                One Proportion Confidence Interval Graph
+                {{"button_toGraph"|translate}}{{"homepage_One_Proportions_Confidence_Interval"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_opci_title' | translate}}</h1>
