--- a/savis4/src/app/user-manual/user-manual-components/regression/regression.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/regression/regression.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/LR']"
             target="_blank"
             rel="noopener norefferer">
-                Regression Graph
+                {{"button_toGraph"|translate}}{{"homepage_Linear_Regression_Visualization"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_regression_title' | translate}}</h1>
