--- a/savis4/src/app/user-manual/user-manual-components/tmht/tmht.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/tmht/tmht.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/twomeans']"
             target="_blank"
             rel="noopener norefferer">
-                Two Means Hypothesis Graph
+                {{"button_toGraph"|translate}}{{"homepage_Two_Mean_Hypothesis_Testing"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_tmht_title' | translate}}</h1>
