--- a/savis4/src/app/user-manual/user-manual-components/tpci/tpci.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/tpci/tpci.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/twoproportionsCI']"
             target="_blank"
             rel="noopener norefferer">
-                Two Proportions Confidence Graph
+                {{"button_toGraph"|translate}}{{"homepage_Two_Proportions_Confidence_Interval"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_tpci_title' | translate}}</h1>
