--- a/savis4/src/app/user-manual/user-manual-components/tpht/tpht.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/tpht/tpht.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/twoproportions']"
             target="_blank"
             rel="noopener norefferer">
-                Two Proportions Hypothesis Graph
+                {{"button_toGraph"|translate}}{{"homepage_Two_Proportion_Hypothesis_Testing"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_tpht_title' | translate}}</h1>
