--- a/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
+++ b/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
@@ -8,7 +8,7 @@
       [routerLink]="['/tpci']"
       target="_blank"
       rel="noopener norefferer">
-          Two Proportion Confidence Interval Guide
+          {{"button_toGuide"|translate}}{{"homepage_Two_Proportions_Confidence_Interval" | translate}}
     </a>
   </div>
 
@@ -20,7 +20,7 @@
       [routerLink]="['/problems-tpci']"
       target="_blank"
       rel="noopener norefferer">
-          Two Proportion Confidence Interval Practice Problems
+          {{"button_toPP"|translate}}{{"homepage_Two_Proportions_Confidence_Interval" | translate}}
     </a>
   </div>
 
