--- a/savis4/src/app/user-manual/user-manual-components/opht/opht.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/opht/opht.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/oneproportion']"
             target="_blank"
             rel="noopener norefferer">
-                One Proportion Hypothesis Graph
+                {{"button_toGraph"|translate}}{{"homepage_One_Proportion_Hypothesis_Testing"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_opht_title' | translate}}</h1>
