--- a/savis4/src/app/user-manual/user-manual-components/tmci/tmci.component.html
+++ b/savis4/src/app/user-manual/user-manual-components/tmci/tmci.component.html
@@ -9,7 +9,7 @@
             [routerLink] ="['/twomeansCI']"
             target="_blank"
             rel="noopener norefferer">
-                Two Means Confidence Interval Graph
+                {{"button_toGraph"|translate}}{{"homepage_Two_Mean_Confidence_Interval"|translate}}
         </a>
     </div>
   <h1 class="title">{{'uman_tmci_title' | translate}}</h1>
