--- a/savis4/src/app/features/linear-regression/scatter-plot/scatter-plot.component.html
+++ b/savis4/src/app/features/linear-regression/scatter-plot/scatter-plot.component.html
@@ -1,20 +1,21 @@
 <div class="graphBox">
-    <div>
-      <div class="least-squares-badge">
-        <span class="least-squares-label">{{ 'lr_least_squares' | translate }}</span>
-        <span class="least-squares-value">{{ leastSquares | number:'1.2-2' }}</span>
-      </div>
-      
-      <div class="regression-formula">
-        <span class="regression-formula-label">Regression Formula</span>
-        <span class="regression-formula-value">{{ regressionFormula }}</span>
-      </div>
-      <div>
-        <canvas baseChart
-                [datasets]="scatterChartData"
-                [options]="scatterChartOptions"
-                [chartType]="scatterChartType">
-        </canvas>
-      </div>
+  <div class="stats-container">
+    <div class="least-squares-badge">
+      <span class="least-squares-label">LS Area:</span>
+      <span class="least-squares-value">{{ leastSquares | number:'1.2-2' }}</span>
+    </div>
+    
+    <div class="regression-formula">
+      <span class="regression-formula-label">Formula:</span>
+      <span class="regression-formula-value">{{ regressionFormula }}</span>
     </div>
   </div>
+  
+  <div class="chart-wrapper">
+    <canvas baseChart
+            [datasets]="scatterChartData"
+            [options]="scatterChartOptions"
+            [chartType]="scatterChartType">
+    </canvas>
+  </div>
+</div>
