--- a/savis4/src/app/components/login/login.component.html
+++ b/savis4/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="outer">
     <div class ="header">
-        <h3 class="title pt-6">SAVIS</h3>
+        <h3 class="title pt-6"><a routerLink="/homepage" class="font-weight-bold">SAVIS</a></h3>
     </div>
         <div class="container">
             <div class="row">
