Jira 211 - Fix UI Text Alignment and Styling

--- a/savis4/src/app/download-page/download-page.component.html
+++ b/savis4/src/app/download-page/download-page.component.html
@@ -1,27 +1,27 @@
 <app-navbar></app-navbar>
 
-<body>
-  <div class="flex w-full gap-12">
-    <div class="w-full pl-12 pr-12">
-      <div class="bg-lightMintGreen p-10 mt-12 h-100">
-        <p class="text-center text-4xl font-medium">{{ 'download_title' | translate }}</p>
-        <p class="text-center text-xl">{{'download_bio'|translate}}</p>
+<div class="download-container">
+  <h1 class="title">{{ 'download_title' | translate }}</h1>
+  <div class="content">
+    <div class="box-container bg-lightMintGreen p-10 mt-4">
+      <p class="text-center text-xl">{{'download_bio'|translate}}</p>
       <div class="flex flex-col items-center justify-center space-y-6">
         <button (click)="downloadWindows()" class="h-12 px-6 bg-forestGreen hover:bg-darkForestGreen text-white text-lg">
-        {{'download_windows' | translate}}
+          {{'download_windows' | translate}}
         </button>
         <button class="h-12 px-11 bg-forestGreen hover:bg-darkForestGreen text-white text-lg">{{'download_mac' | translate}}</button>
         <button (click)="downloadLinux()" class="h-12 px-10 bg-forestGreen hover:bg-darkForestGreen text-white text-lg">
-        {{'download_linux' | translate}}
+          {{'download_linux' | translate}}
         </button>
-        <p class="text-center text-2xl">{{'download_mobileTitle' | translate}}</p>
-      <div class="flex flex-row item-center justify-center space-x-7">
-        <button class="h-12 px-8 bg-forestGreen hover:bg-darkForestGreen text-white text-lg">{{'download_apple' | translate}}</button>
-        <button class="h-12 px-6 bg-forestGreen hover:bg-darkForestGreen text-white text-lg">{{'download_android' | translate}}</button>
-      </div>
+        <p class="text-center text-2xl mt-4">{{'download_mobileTitle' | translate}}</p>
+        <div class="flex flex-row items-center justify-center space-x-7 mt-2">
+          <button class="h-12 px-8 bg-forestGreen hover:bg-darkForestGreen text-white text-lg">{{'download_apple' | translate}}</button>
+          <button class="h-12 px-6 bg-forestGreen hover:bg-darkForestGreen text-white text-lg">{{'download_android' | translate}}</button>
+        </div>
       </div>
     </div>
-  </div> 
+  </div>
+</div>
 
 <footer class="static-footer">
   {{ "nav_copyright" | translate }}
