--- a/savis4/src/app/download-page/download-page.component.scss
+++ b/savis4/src/app/download-page/download-page.component.scss
@@ -20,3 +20,19 @@
   button:hover{
     background-color: var(--fourth-col);
   }
+
+  /* Title styling to match Problems/User Manual pages */
+  .download-container {
+    .title {
+      text-align: center;
+      font-size: 2.5rem;
+      margin: 18px 0 20px 0;
+      color: var(--second-col);
+      font-weight: 700;
+    }
+
+    .content {
+      display: block;
+      width: 100%;
+    }
+  }
